# audio-metrics

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: 1_basic_usage.py  2_musdb.py  benchmark_pipeline.py  example.py  example_1.py  example_2.py  example_3.py  example_apa.py
playground/: benchmark_pipeline.py
src/audio_metrics/: __init__.py  apa.py  audio_metrics.py  audio_metrics_new.py  audio_prompt_adherence.py  clap.py  cpu_parallel.py  data.py  dataset.py  embed.py  embed_pipeline.py  example_utils.py  fad.py  get_url.py  gpu_parallel.py  kid.py  mix_functions.py  openl3.py  projection.py  vggish.py
src/audio_metrics/embedders/: __init__.py  clap.py  vggish.py
src/audio_metrics/metrics/: apa.py  density_coverage.py  fad.py  kd.py  kid.py  prdc.py
src/audio_metrics/old/: apa.py  audio_metrics.py  clap.py  dataset.py  openl3.py
src/audio_metrics/tests/: test_audio_metrics.py  test_data.py
src/audio_metrics/util/: audio.py  cpu_parallel.py  get_url.py  gpu_parallel.py  shuffle.py
tests/: test_apa.py  test_embed.py  test_loudness.py  test_metrics.py
