[project]
name = "audio-metrics"
version = "0.2.0"
description = "Metrics to measure the quality of audio"
authors = [{name = "Maarten Grachten"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"torch<2.6",
	"torchvision",
	"laion-clap @ git+https://github.com/LAION-AI/CLAP.git",
    "opt-einsum",
	"soundfile",
	"pyloudnorm",
	"scikit-learn",
	"loguru",
	"cylimiter",
	"prdc",
	"einops",
	"resampy",
	"tqdm",
	"rich",
	"musdb",
	"appdirs",
]

[tool.uv]
package = true

[tool.black]
line-length = 90

[tool.ruff]
line-length = 90

[project.optional-dependencies]
dev = [
    "ipdb",
    "ipython",
    "python-lsp-server",
    "python-lsp-ruff",
    "ruff",
	"flake8",
	"pylint"
]

