[project]
name = "audio-metrics"
version = "1.0.1"
description = "Metrics to measure the quality of audio"
authors = [{name = "Maarten Grachten"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch<2.6",
    "torchvision",
    "laion-clap>=1.1.6",
    "opt-einsum",
    "pyloudnorm",
    "scikit-learn",
    "cylimiter",
    "prdc",
    "einops",
    "resampy",
    "tqdm",
    "appdirs",
    "rich>=14.0.0",
]

[tool.uv]
package = true

[tool.black]
line-length = 90

[tool.ruff]
line-length = 90

[project.optional-dependencies]
examples = [
    "soundfile",
    "musdb",
]
dev = [
    "rich",
    "pytest",
    "ipdb",
    "ipython",
    "python-lsp-server",
    "python-lsp-ruff",
    "ruff",
    "flake8",
    "pylint"
]

