[project]
name = "audio-metrics"
version = "1.0.3"
description = "Metrics to measure the quality of audio"
authors = [{name = "Maarten Grachten"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision>=0.24; python_version >= '3.13'", # missing dep for clap
    "torchvision; python_version < '3.13'",
    "laion-clap>=1.1.6",
    "opt-einsum",
    "pyloudnorm",
    "scikit-learn",
    "numpy-audio-limiter",
    "prdc",
    "einops",
    "resampy",
    "tqdm",
    "appdirs",
]

[tool.uv]
package = true

[tool.black]
line-length = 90

[tool.ruff]
line-length = 90

[project.optional-dependencies]
examples = [
    "soundfile",
    "musdb",
    "setuptools", # missing dep for musdb
]
dev = [
    "rich",
    "pytest",
    "ipdb",
    "ipython",
    "python-lsp-server",
    "python-lsp-ruff",
    "ruff",
    "flake8",
    "pylint"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
